# Attention-Residual

pretrain/: README.md  pyproject.toml
pretrain/configs/: delayed_kv_attnres.yaml  delayed_kv_baseline.yaml  tinystories_attnres.yaml  tinystories_baseline.yaml  tinystories_block_attnres.yaml
pretrain/scripts/: benchmark_block_attnres.py  build_batch_plan.py  build_delayed_kv.py  check_paired_init.py  pretokenize_hf.py  train.py
pretrain/src/attnres_compare/: config.py  train.py
pretrain/src/attnres_compare.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pretrain/src/attnres_compare/data/: __init__.py  memmap.py
pretrain/src/attnres_compare/models/: __init__.py  attnres.py  baseline.py  common.py
pretrain/src/attnres_compare/models/.ipynb_checkpoints/: __init__-checkpoint.py  attnres-checkpoint.py
pretrain/src/attnres_compare/utils/: checkpoint.py  diagnostics.py  distributed.py  init.py  optim.py  seed.py  wandb_utils.py
